--- a/safe-way/package.json
+++ b/safe-way/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/parser": "5.48.2",
     "eslint-plugin-nuxt": "4.0.0",
     "eslint-plugin-vue": "9.9.0",
-    "nuxt": "^3.0.0"
+    "nuxt": "^3.0.0",
+    "typescript": "^4.9.3"
   }
 }
